--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,7 @@
     },
     "scripts": {
         "start-client": "react-scripts start",
-        "build": "react-scripts build && (cd../backend && npm install",
+        "build": "react-scripts build && (cd../backend && yarn install",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
